URL auch in allgemein angepasst.

--- a/durchstich_allgemein.ipynb
+++ b/durchstich_allgemein.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,13 +513,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e98aa78a18af49cd89ab124441a7c2ec",
+       "model_id": "d802c39ea51346098b89cbed67c4016e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -533,7 +533,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8240e544ac874f28ad125bc50d56031f",
+       "model_id": "4d593f1714ac42d6b0c6ecd61f3667fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -547,7 +547,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "632e362c549b4b9293a90532810eacab",
+       "model_id": "c1c6ab30d81747e8b46b51eb3ee563c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -561,7 +561,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16ee0fda0986436387d95a6ea6591186",
+       "model_id": "68ed2eff91bd44a4a77b02f13edc188a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -575,7 +575,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3e967bcf30c4df1b5f877b93e0e65b4",
+       "model_id": "81ee4d580c534568a1fd1c5c2006b398",
        "version_major": 2,
        "version_minor": 0
       },
@@ -589,7 +589,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6369c9b0e0d540c1bf70469e26b5b0c7",
+       "model_id": "949785e0b71c4648bb1f7cadc19201eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -603,7 +603,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85dd7374d8e0479bb780ad6558879300",
+       "model_id": "7e0d1555176844a386537363aac393db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -620,7 +620,7 @@
     "display(\n",
     "    widgets.HBox([\n",
     "        widgets.Image(\n",
-    "            value=Image('K:\\Benutzer\\m4bc_Jos\\Portal for ArcGIS\\Web_Logos\\Kanton_Bern_RGB\\png\\Kein_Schutzraum\\Kanton_Bern_KS_RGB_small.png').data, #w150, h68.58\n",
+    "            value=Image('https://oerebfiles-test.apps.be.ch/logos/kanton_BE.gif').data, #w150, h68.58\n",
     "            width='15%',\n",
     "            height='15%'\n",
     "\n",
